<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparentBG"
        android:elevation="@dimen/_10sdp"
        android:fontFamily="@font/playlist"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_30ssp"
        android:transitionName="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/tvTextDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/bnReadText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/read"
        app:layout_constraintBottom_toBottomOf="@id/viewFinder"
        app:layout_constraintEnd_toStartOf="@id/bnScanCode"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bnScanCode"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/scan"
        app:layout_constraintBottom_toBottomOf="@id/viewFinder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bnReadText" />

    <TextView
        android:id="@+id/tvTextDisplay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:background="@null"
        android:fontFamily="@font/nunito"
        android:gravity="center"
        android:hint="@string/text_will_appear_here"
        android:padding="@dimen/_5sdp"
        android:scrollbars="vertical"
        android:textColor="@color/dark"
        android:textColorHighlight="@color/purple_500"
        android:textIsSelectable="true"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivCopyText"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_margin="@dimen/_5sdp"
        android:contentDescription="@string/copy"
        android:src="@drawable/ic_copy"
        app:layout_constraintEnd_toEndOf="@id/tvTextDisplay"
        app:layout_constraintTop_toTopOf="@id/tvTextDisplay" />

    <ImageView
        android:id="@+id/ivClear"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/_5sdp"
        android:contentDescription="@string/copy"
        android:src="@drawable/ic_clear"
        app:layout_constraintStart_toStartOf="@id/tvTextDisplay"
        app:layout_constraintTop_toTopOf="@id/tvTextDisplay" />

    <Button
        android:id="@+id/bnOpenLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:backgroundTint="@color/green_400"
        android:text="@string/open"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/tvTextDisplay"
        app:layout_constraintEnd_toEndOf="@id/tvTextDisplay" />
</androidx.constraintlayout.widget.ConstraintLayout>